naf/build_log.txt
/home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/utils/cpp_extension.py:23: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  from pkg_resources import packaging  # type: ignore[attr-defined]
Traceback (most recent call last):
  File "/home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/utils/cpp_extension.py", line 1740, in _run_ninja_build
    subprocess.run(
  File "/home/s.schaub/miniforge3/envs/naf/lib/python3.9/subprocess.py", line 528, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['ninja', '-v']' returned non-zero exit status 1.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/s.schaub/naf/train.py", line 13, in <module>
    from src.trainer import Trainer
  File "/home/s.schaub/naf/src/trainer.py", line 16, in <module>
    from .encoder import get_encoder
  File "/home/s.schaub/naf/src/encoder/__init__.py", line 3, in <module>
    from .hashencoder import HashEncoder
  File "/home/s.schaub/naf/src/encoder/hashencoder/__init__.py", line 1, in <module>
    from .hashgrid import HashEncoder
  File "/home/s.schaub/naf/src/encoder/hashencoder/hashgrid.py", line 8, in <module>
    from .backend import _backend
  File "/home/s.schaub/naf/src/encoder/hashencoder/backend.py", line 6, in <module>
    _backend = load(name='_hash_encoder',
  File "/home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/utils/cpp_extension.py", line 1144, in load
    return _jit_compile(
  File "/home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/utils/cpp_extension.py", line 1357, in _jit_compile
    _write_ninja_file_and_build_library(
  File "/home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/utils/cpp_extension.py", line 1469, in _write_ninja_file_and_build_library
    _run_ninja_build(
  File "/home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/utils/cpp_extension.py", line 1756, in _run_ninja_build
    raise RuntimeError(message) from e
RuntimeError: Error building extension '_hash_encoder': [1/2] /home/s.schaub/miniforge3/envs/naf/bin/nvcc  -ccbin /home/s.schaub/miniforge3/envs/naf/bin/x86_64-conda-linux-gnu-gcc -DTORCH_EXTENSION_NAME=_hash_encoder -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\"_gcc\" -DPYBIND11_STDLIB=\"_libstdcpp\" -DPYBIND11_BUILD_ABI=\"_cxxabi1014\" -isystem /home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/include -isystem /home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/include/torch/csrc/api/include -isystem /home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/include/TH -isystem /home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/include/THC -isystem /home/s.schaub/miniforge3/envs/naf/include -isystem /home/s.schaub/miniforge3/envs/naf/include/python3.9 -D_GLIBCXX_USE_CXX11_ABI=1 -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_BFLOAT16_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__ --expt-relaxed-constexpr -gencode=arch=compute_80,code=sm_80 --compiler-options '-fPIC' -O3 -U__CUDA_NO_HALF_OPERATORS__ -U__CUDA_NO_HALF_CONVERSIONS__ -U__CUDA_NO_HALF2_OPERATORS__ -std=c++14 -c /home/s.schaub/naf/src/encoder/hashencoder/src/hashencoder.cu -o hashencoder.cuda.o 
FAILED: hashencoder.cuda.o 
/home/s.schaub/miniforge3/envs/naf/bin/nvcc  -ccbin /home/s.schaub/miniforge3/envs/naf/bin/x86_64-conda-linux-gnu-gcc -DTORCH_EXTENSION_NAME=_hash_encoder -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\"_gcc\" -DPYBIND11_STDLIB=\"_libstdcpp\" -DPYBIND11_BUILD_ABI=\"_cxxabi1014\" -isystem /home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/include -isystem /home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/include/torch/csrc/api/include -isystem /home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/include/TH -isystem /home/s.schaub/miniforge3/envs/naf/lib/python3.9/site-packages/torch/include/THC -isystem /home/s.schaub/miniforge3/envs/naf/include -isystem /home/s.schaub/miniforge3/envs/naf/include/python3.9 -D_GLIBCXX_USE_CXX11_ABI=1 -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_BFLOAT16_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__ --expt-relaxed-constexpr -gencode=arch=compute_80,code=sm_80 --compiler-options '-fPIC' -O3 -U__CUDA_NO_HALF_OPERATORS__ -U__CUDA_NO_HALF_CONVERSIONS__ -U__CUDA_NO_HALF2_OPERATORS__ -std=c++14 -c /home/s.schaub/naf/src/encoder/hashencoder/src/hashencoder.cu -o hashencoder.cuda.o 
/home/s.schaub/miniforge3/envs/naf/x86_64-conda-linux-gnu/sysroot/usr/include/linux/types.h:12:27: error: expected initializer before '__s128'
 typedef __signed__ __int128 __s128 __attribute__((aligned(16)));
                           ^~~~~~
ninja: build stopped: subcommand failed.

